# mafia-game

./: Cargo.toml  LICENSE
mafia-game-client-lib/: Cargo.toml
mafia-game-client-lib/src/: lib.rs
mafia-game-lib/: Cargo.toml
mafia-game-lib/src/: lib.rs
mafia-game-server-lib/: Cargo.toml
mafia-game-server-lib/src/: client.rs  consts.rs  error.rs  game.rs  lib.rs
mafia-game-server-lib/src/tests/: client.rs  game.rs  server.rs
mafia-game-server-lib/src/tests/snapshots/: mafia_game_server_lib__tests__server__server_messages-2.snap  mafia_game_server_lib__tests__server__server_messages-3.snap  mafia_game_server_lib__tests__server__server_messages-4.snap  mafia_game_server_lib__tests__server__server_messages-5.snap  mafia_game_server_lib__tests__server__server_messages-6.snap  mafia_game_server_lib__tests__server__server_messages-7.snap  mafia_game_server_lib__tests__server__server_messages-8.snap  mafia_game_server_lib__tests__server__server_messages-9.snap  mafia_game_server_lib__tests__server__server_messages.snap
