[package]
name = "mafia-game-server-lib"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
rand = "0.9"
thiserror = "2.0"
tracing = { version = "0.1" }
uuid = { version = "1.16", features = ["default", "v4"] }

[dev-dependencies]
test-log = { version = "0.2", features = ["trace"] }
